Adding Generator Data

--- a/DEED.ipynb
+++ b/DEED.ipynb
@@ -56,6 +56,28 @@
     },
     {
       "metadata": {
+        "id": "Ff-0b8A0we1V",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "generator_data=[(150,470, 786.7988,38.5397,0.1524,450,0.041,103.3908,2.4444,0.0312,0.5035,0.0207,80,80),\n",
+        "                (135,470, 451.3251,46.1591,0.1058,600,0.036,103.3908,2.4444,0.0312,0.5035,0.0207,80,80),\n",
+        "                ( 73,340,1049.9977,40.3965,0.0280,320,0.028,300.3910,4.0695,0.0509,0.4968,0.0202,80,80),\n",
+        "                ( 60,300,1243.5311,38.3055,0.0354,260,0.052,300.3910,4.0695,0.0509,0.4968,0.0202,50,50),\n",
+        "                ( 73,243,1658.5696,36.3278,0.0211,280,0.063,320.0006,3.8132,0.0344,0.4972,0.0200,50,50),\n",
+        "                ( 57,160,1356.6592,38.2704,0.0179,310,0.048,320.0006,3.8132,0.0344,0.4972,0.0200,50,50),\n",
+        "                ( 20,130,1450.7045,36.5104,0.0121,300,0.086,330.0056,3.9023,0.0465,0.5163,0.0214,30,30),\n",
+        "                ( 47,120,1450.7045,36.5104,0.0121,340,0.082,330.0056,3.9023,0.0465,0.5163,0.0214,30,30),\n",
+        "                ( 20, 80,1455.6056,39.5804,0.1090,270,0.098,350.0056,3.9524,0.0465,0.5475,0.0234,30,30),\n",
+        "                ( 10, 55,1469.4026,40.5407,0.1295,380,0.094,360.0012,3.9864,0.0470,0.5475,0.0234,30,30)]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "q--UOyF8ht9G",
         "colab_type": "code",
         "colab": {}
