Put generator data in pandas dataFrame

--- a/DEED.ipynb
+++ b/DEED.ipynb
@@ -6,8 +6,7 @@
       "name": "DEED",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -58,23 +57,58 @@
       "metadata": {
         "id": "Ff-0b8A0we1V",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e8f241f2-9700-4cde-f33f-83fa9e62a6db"
       },
       "cell_type": "code",
       "source": [
-        "generator_data=[(150,470, 786.7988,38.5397,0.1524,450,0.041,103.3908,2.4444,0.0312,0.5035,0.0207,80,80),\n",
-        "                (135,470, 451.3251,46.1591,0.1058,600,0.036,103.3908,2.4444,0.0312,0.5035,0.0207,80,80),\n",
-        "                ( 73,340,1049.9977,40.3965,0.0280,320,0.028,300.3910,4.0695,0.0509,0.4968,0.0202,80,80),\n",
-        "                ( 60,300,1243.5311,38.3055,0.0354,260,0.052,300.3910,4.0695,0.0509,0.4968,0.0202,50,50),\n",
-        "                ( 73,243,1658.5696,36.3278,0.0211,280,0.063,320.0006,3.8132,0.0344,0.4972,0.0200,50,50),\n",
-        "                ( 57,160,1356.6592,38.2704,0.0179,310,0.048,320.0006,3.8132,0.0344,0.4972,0.0200,50,50),\n",
-        "                ( 20,130,1450.7045,36.5104,0.0121,300,0.086,330.0056,3.9023,0.0465,0.5163,0.0214,30,30),\n",
-        "                ( 47,120,1450.7045,36.5104,0.0121,340,0.082,330.0056,3.9023,0.0465,0.5163,0.0214,30,30),\n",
-        "                ( 20, 80,1455.6056,39.5804,0.1090,270,0.098,350.0056,3.9524,0.0465,0.5475,0.0234,30,30),\n",
-        "                ( 10, 55,1469.4026,40.5407,0.1295,380,0.094,360.0012,3.9864,0.0470,0.5475,0.0234,30,30)]"
+        "# import pandas to use pandas DataFrame \n",
+        "import pandas as pd\n",
+        "\n",
+        "# data in the form of list of tuples \n",
+        "generator_characteristics = pd.DataFrame([(150,470, 786.7988,38.5397,0.1524,450,0.041,103.3908,-2.4444,0.0312,0.5035,0.0207,80,80),\n",
+        "                                          (135,470, 451.3251,46.1591,0.1058,600,0.036,103.3908,-2.4444,0.0312,0.5035,0.0207,80,80),\n",
+        "                                          ( 73,340,1049.9977,40.3965,0.0280,320,0.028,300.3910,-4.0695,0.0509,0.4968,0.0202,80,80),\n",
+        "                                          ( 60,300,1243.5311,38.3055,0.0354,260,0.052,300.3910,-4.0695,0.0509,0.4968,0.0202,50,50),\n",
+        "                                          ( 73,243,1658.5696,36.3278,0.0211,280,0.063,320.0006,-3.8132,0.0344,0.4972,0.0200,50,50),\n",
+        "                                          ( 57,160,1356.6592,38.2704,0.0179,310,0.048,320.0006,-3.8132,0.0344,0.4972,0.0200,50,50),\n",
+        "                                          ( 20,130,1450.7045,36.5104,0.0121,300,0.086,330.0056,-3.9023,0.0465,0.5163,0.0214,30,30),\n",
+        "                                          ( 47,120,1450.7045,36.5104,0.0121,340,0.082,330.0056,-3.9023,0.0465,0.5163,0.0214,30,30),\n",
+        "                                          ( 20, 80,1455.6056,39.5804,0.1090,270,0.098,350.0056,-3.9524,0.0465,0.5475,0.0234,30,30),\n",
+        "                                          ( 10, 55,1469.4026,40.5407,0.1295,380,0.094,360.0012,-3.9864,0.0470,0.5475,0.0234,30,30)],\n",
+        "                                          columns=[\"p_max_i\",\"p_min_i\",\"a_i\",\"b_i\",\"c_i\",\"d_i\",\"e_i\",\"alpha_i\",\"beta_i\",\"gamma_i\",\"eta_i\",\"delta_i\",\"ur_i\",\"dr_i\"],\n",
+        "                                          index=[\"unit1\",\"unit2\",\"unit3\",\"unit4\",\"unit5\",\"unit6\",\"unit7\",\"unit8\",\"unit9\",\"unit10\"])\n",
+        "# Show full dataFrame\n",
+        "#print(generator_characteristics)\n",
+        "\n",
+        "# select a column by name (i.e. label)\n",
+        "#print(generator_characteristics.loc[:, \"b_i\"])\n",
+        "\n",
+        "# Get numpy array instead of pandas series\n",
+        "#print(generator_characteristics.loc[:, \"b_i\"]).values\n",
+        "\n",
+        "# Select a unit by label\n",
+        "#print(generator_characteristics.loc[\"unit3\", :])\n",
+        "\n",
+        "# Select rows based on cloumn value\n",
+        "#print(generator_characteristics.loc[generator_characteristics.loc[:, \"dr_i\"] <= 50, :])\n",
+        "\n",
+        "# Select a specific unit value by label\n",
+        "print(generator_characteristics.loc[\"unit3\", \"d_i\"])\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "320\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
