Added power demand data

--- a/DEED.ipynb
+++ b/DEED.ipynb
@@ -61,12 +61,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "e8f241f2-9700-4cde-f33f-83fa9e62a6db"
+        "outputId": "d1afbc06-9770-4ece-bb19-3ad8c489516c"
       },
       "cell_type": "code",
       "source": [
         "# import pandas to use pandas DataFrame \n",
         "import pandas as pd\n",
+        "\n",
+        "# Set constants, N = number of generators, M = number of hours in day\n",
+        "N = 10\n",
+        "M = 24\n",
         "\n",
         "# data in the form of list of tuples \n",
         "generator_characteristics = pd.DataFrame([(150,470, 786.7988,38.5397,0.1524,450,0.041,103.3908,-2.4444,0.0312,0.5035,0.0207,80,80),\n",
@@ -99,7 +103,7 @@
         "# Select a specific unit value by label\n",
         "print(generator_characteristics.loc[\"unit3\", \"d_i\"])\n"
       ],
-      "execution_count": 28,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,12 +116,68 @@
     },
     {
       "metadata": {
+        "id": "diaM9NdcENpG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 338
+        },
+        "outputId": "b9672856-dfdf-4f62-8434-96c10287c569"
+      },
+      "cell_type": "code",
+      "source": [
+        "# data in the form of list of tuples \n",
+        "hour_power_demand = pd.DataFrame([(1036),(1110),(1258),(1406),(1480),(1628),(1702),(1776),(1924),(2022),(2106),(2150),(2072),(1924),(1776),(1554),(1480),(1628),(1776),(1972),(1924),(1628),(1332),(1184)],\n",
+        "                                 columns=[\"p_d\"],\n",
+        "                                 index=[\"hour1\",\"hour2\",\"hour3\",\"hour4\",\"hour5\",\"hour6\",\"hour7\",\"hour8\",\"hour9\",\"hour10\",\"hour11\",\"hour12\",\"hour13\",\"hour14\",\"hour15\",\"hour16\",\"hour17\",\"hour18\",\"hour19\",\"hour20\",\"hour21\",\"hour22\",\"hour23\",\"hour24\"])\n",
+        "\n",
+        "# Show full dataFrame\n",
+        "#print(hour_power_demand)\n",
+        "\n",
+        "ax = hour_power_demand.plot(title=\"HOURLY POWER DEMAND\", kind=\"bar\", color='red')\n",
+        "\n",
+        "ax.set_xlabel(\"Hour\")\n",
+        "ax.set_ylabel(\"MW\")\n",
+        "\n"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Text(0, 0.5, 'MW')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY4AAAEwCAYAAACgxJZ5AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvnQurowAAH11JREFUeJzt3XuYXFWZ7/HvjyQQEcIlCQFJsCMT\nCagIMYMgQVGOEC4KeDBHJBAuI46Azpwz6uBlZERHBY83VPRBjQSRKCNEgiIYQQTkmgBCAgEDBEgk\nEELkYghyeeePvZoUlbqtTldXVdfv8zz76V1rr3fvtbur66219qpdigjMzMwatVGrG2BmZp3FicPM\nzLI4cZiZWRYnDjMzy+LEYWZmWZw4zMwsixOHmZllceKwDSZpqaT/VVZ2rKTrKpTdKWmNpBWSvidp\ny5Lt50r6YllMj6SQNLTkWM9Keibt41xJm9XZx0aSrpf0mbLy4yXdK+lVFc7pOklr03FWSvqFpG1L\ntk+RdHXa/qSkSyRNLNl+n6T/XfL4Hek8ysuelDRE0j9JejHtr3TZJtVdVnbeMyW9usbfpLf9T0t6\nStJ8SZ+UtHFJnS9Ker7seI+nbUNTex+RNKQkZmNJqyS9UOGY56f9jSkr/2La1/tKyoansrElsX9P\n7X06PU/+S9KIaudorePEYQNC0r8BZwCfALYA9gReC8wrfTFr0HsiYjNgN2B34FO1KkfES8DxwCd6\nX9zTi9tXgRMi4tkqof+cjjMRGA38/xS7D3A58AtgW+B1wF3AHyX1pNhrgLeX7OvtwOIKZX+MiBfT\n42sjYrOy5bGS+gem9kwC9gA+Weu8U/s3B16T6k4HfiVJJXV+Wna8UWX7eArYv+TxIcDj5QeStDlw\neKr/wQpteQI4XVKt15wvpfaOBk4A9gGurZTYrbWcOKzp0rvGzwMfjYjLI+L5iFgKTAN6KF7QskXE\nCuAKigRSr+5iisT1o/Ti9R1gdkRc20DsKuBi4I2p6ExgZkR8JyKeiYhVEfEp4Fbgc6lOeeLYJx2/\nvOyaesev0J6/AL+lgfNO9Z+JiKuAQ9MxD8g43E+AY0oeHwOcV6He+4HHgC8BMyps/zUg4MgG2rs2\nIm4G3kORmCvtz1rIicMGwtuA4RQvvi+LiGeAy4B392WnaZjjQGBJgyFfTe34BTAZOLXB44wG3gfc\nlt5ZvxX47wpVL2TduVwD7CppizTMtjswG9impGwv+pA4JI0DptL4eQMQEQ8At1Ekj0ZdDLxL0ghJ\nIyl6ipdWqDeD4vxmA2+S9Oay7S8B/wH8Z++wYwPtfRK4MrO9NgCcOKy//FLSX3sX4OySbaOAxyNi\nvXFx4JG0PfdYTwMPU7zLPa2RoHT84ymGVE5JiauWs9O53A48BHwcGEnxzvmRCvVfPpeIuC89nkKR\nNO6KiOeAG0rKNgJuKYmfUvo7lHRP2f5/lc77IWAZcHoj513mL8DWJY8/WHbMeWX11wC/oehRHAnM\nAf5eWkHSeIoX9wtSb+hqXtlL6TWHYijruA1or7UBJw7rL4dFxJa9C3BSybbHgVFV3mlux7ox8xeA\nYWXbh1G8W32p7FibA/tSXH/ISTyLyn7WclI6n+0j4ug0ZPUEEKnd5UrPBdYNV70d6B0Su66k7MaI\neL6k/nWlv8OI2Kls/4ek894P2IW+vaBun86h1wVlx6zU+zuPIhFUG6Y6BrgzIhamxz8Fjir/e0dx\nR9XPUvQ8Nulje60NOHHYQLgBeI5iuOdlaTbUgRTDEVC8k+4pix0PPJwucL9CRPwBOJd00XogRMRT\nwM0U78DLTWPducC6xLEP6xLHtSVl2cNUqQ1XUbw4fzUnLl24362kLY36PcVEhi0j4oayfYoicbw+\nzfZaQXENaAwVrqVExG8o/s4fbqC9I4B39aG91mROHNZ0aaz688C3JU2VNCy9iF1IMeTyk1T1IuBg\nSfunKaqvoXiH+rMau/8m8O6yMfUhabpn75I7a6uefwdOkHSypM0kbS3pyxTXTUqHj64B3gLsDVyf\nym4HXk+RPPqUOJJvAAdJemO9ipJeLWlf4JfAHykmFDQs9RQOAQ6rsHkKMI7i3HdLyxsp/raVhqsA\nPkPxO6zW3k0kTQYuAVZSuZdjLeTEYQMiIs4EPk3RO3gKuIniGsV+aeyfiFhEMY7+ZYrhiRtSvc/X\n2G/vC8vnSopPBZ4tWa7q53P5A0VPaRqwAlhK8WK5d0TcX1LvLuCvFD2mp1PZi8AC4NXAjWW73qfC\n5zh2r9KGFRS9jv+o0dTvp2siK4CvAz8HDo5XfgnPURWOObLC8Ram8yk3A5gTEYsiYkXvAnwLeK9K\nPqdTsq8/pN9BuU+n9q4CZlH8fvaOiDU1ztFaQP4iJzMzy+Eeh5mZZXHiMDOzLE4cZmaWxYnDzMyy\nOHGYmVmWhu4Z02lGjRoVPT09rW6GmVlHWbBgweMRMbpevUGZOHp6epg/f36rm2Fm1lEkPdhIPQ9V\nmZlZFicOMzPL4sRhZmZZBuU1DjOz/vT888+zbNky1q5d2+qm9Ivhw4czduxYhg0r/xaDxjhxmJnV\nsWzZMjbffHN6enp45Ve2d56IYNWqVSxbtozx48f3aR8eqjIzq2Pt2rWMHDmy45MGgCRGjhy5Qb0n\nJw4zswYMhqTRa0PPxYnDzMyyOHGY9Qep+mKDT62/d1+WJrn66qs55JBD+n2/ThxmZpbFicPMrM0t\nXbqUiRMnctRRR7HzzjtzxBFHsGZN5W/Uvfzyy5k4cSKTJk3i4osvbkp7nDjMzDrAPffcw0knncTd\nd9/NiBEjOPvss9ers3btWj70oQ9x6aWXsmDBAlasWNGUtjhxmJXytQprU+PGjWPvvfcGYPr06Vx3\n3XXr1Vm8eDHjx49nwoQJSGL69OlNaYsTh5lZByifQtvK6cFOHGZmHeChhx7ihhtuAOCCCy5gypQp\n69WZOHEiS5cu5b777gNg9uzZTWmLE4eZWa6I/l0asNNOO/Hd736XnXfemdWrV/ORj3xkvTrDhw/n\nnHPO4eCDD2bSpElss802/X3mgO9VZdZatYYbGnxBse4wdOhQzj///Lr1pk6dyuLFi5vaFvc4zMws\ni3scZmZtrqenh4ULF76i7PDDD+eBBx54RdkZZ5zBAQcc0PT2NC1xSBoHnAeMAQI4JyK+JWlr4OdA\nD7AUmBYRq1VMEfgWcBCwBjg2Im5N+5oBfDbt+osRMatZ7TYz6wRz5sxp2bGbOVT1AvBvEbELsCdw\nsqRdgFOBKyNiAnBlegxwIDAhLScC3wNIieY04K3AHsBpkrZqYrttMPDnMayfxSC65rSh59K0xBER\nj/T2GCLiaeBuYHvgUKC3xzALOCytHwqcF4UbgS0lbQccAMyLiCciYjUwD5jarHabmZUbPnw4q1at\nGhTJo/eLnIYPH97nfQzINQ5JPcDuwE3AmIh4JG1aQTGUBUVSebgkbFkqq1ZuZjYgxo4dy7Jly1i5\ncmWrm9Iver86tq+anjgkbQZcBPxrRDxV+mnHiAhJ/ZLCJZ1IMcTFDjvs0B+7NDMDYNiwYX3+mtXB\nqKnTcSUNo0gaP42I3ts0PpqGoEg/H0vly4FxJeFjU1m18leIiHMiYnJETB49enT/noiZmb2saYkj\nzZL6EXB3RHy9ZNNcYEZanwFcUlJ+jAp7Ak+mIa0rgP0lbZUuiu+fyszM+ocnU2Rp5lDV3sDRwJ2S\nbk9lnwa+Alwo6QTgQWBa2nYZxVTcJRTTcY8DiIgnJH0BuCXVOz0inmhiu83MrIamJY6IuA6olq73\nq1A/gJOr7GsmMLP/WmdmZn3lW46YmVkWJw4zM8vie1VZ+/MdZNfn30l76NK/g3scZmaWxYnDzMyy\nOHGYmVkWJw4zM8vixGFmZlmcOMzMLIsTh5mZZXHiMDOzLE4cZmaWxYnDzMyyOHGYmVkWJw4zM8vi\nxGFmZll8d1wbOF16J9G2Mtj/BoP9/NqEexxmZpbFicPMzLI4cZiZWRYnDjMzy+LEYWZmWZw4zMws\ni6fjWj5PeTTrau5xmJlZFicOMzPL4sRhZmZZnDjMzCyLE4eZmWVx4jAzsyyejtvNPK3W2tVgf252\n+Pm5x2FmZlmcOMzMLIsTh5mZZXHiMDOzLE4cZmaWxYnDzMyyeDqumdXX4dNHrX+5x2FmZlmaljgk\nzZT0mKSFJWX/KWm5pNvTclDJtk9JWiLpHkkHlJRPTWVLJJ3arPaamVljmtnjOBeYWqH8GxGxW1ou\nA5C0C/AB4A0p5mxJQyQNAb4LHAjsAhyZ6pqZWYs07RpHRFwjqafB6ocCP4uI54AHJC0B9kjblkTE\n/QCSfpbq3tXPzTUzswa14hrHKZLuSENZW6Wy7YGHS+osS2XVys3MrEUGOnF8D9gR2A14BPhaf+1Y\n0omS5kuav3Llyv7arZmZlRnQxBERj0bEixHxEvAD1g1HLQfGlVQdm8qqlVfa9zkRMTkiJo8ePbr/\nG29mZsAAJw5J25U8PBzonXE1F/iApE0kjQcmADcDtwATJI2XtDHFBfS5A9nmjiBVX8xayc/NQalp\nF8clzQb2BUZJWgacBuwraTcggKXAhwEiYpGkCykuer8AnBwRL6b9nAJcAQwBZkbEoma12czM6lMM\nwk99Tp48OebPn9/qZgycvn6qdzDHdUIbHee43Lgmk7QgIibXq+dPjpuZWRYnDjMzy+LEYWZmWZw4\nzMwsi2+r3k7a9IKZmVkp9zjMzCyLE4eZmWVx4jAzsyxOHGZmlsWJw8zMsjhxmJlZFk/HNTPrFG0y\nZd89DjMzy+LEYWZmWZw4zMwsixOHmZllceIwM7MsThxmZpbF03GboU2mzJmZNYN7HGZmlsWJw8zM\nsjhxmJlZFicOMzPLUjNxSNpqoBpiZmadod6sqnskPQ78Ebge+GNE3Nv8ZpmZWbuq2eOIiG2AwygS\nx17AxZIelXSJpE8ORAPNzGwDSdWXPqj7OY7Uw7gXOFfSjsBBwL8A+wNn9umoZmbWsWomDklvA95G\n0dsYB9wP3AhMB25teuvMzKzt1OtxXEeRIL4BzImINc1vkpmZtbN6ieM1FD2OtwEfljSUIpHcANwQ\nEfc3uX1mZtZmaiaOiFgBXJwWJG0KHA98HhgPDGl2A83MrL3Uu8axBcX1jd5ex+7An4FLKWZamZlZ\nl6k3VLWENCwFnA7cEhHPNr1V7cJ3uTUzW0+9oarRA9UQMzPrDPWGqubW2h4R7+3f5piZWburN1S1\nF/AwMBu4CejbxwzNzGzQqJc4tgXeDRwJfBD4NTA7IhY1u2FmZtae6t2r6sWIuDwiZgB7Ulwsv1rS\nKQPSOjMzazt171UlaRPgYIpeRw9wFjCnuc0yM7N2Ve/7OM6jmIo7Cfh8RPxjRHwhIpbX27GkmZIe\nk7SwpGxrSfMk/Tn93CqVS9JZkpZIukPSpJKYGan+nyXN6NNZ9vOdIc3Mulm9bwCcDkyguBvu9ZKe\nSsvTkp6qE3suMLWs7FTgyoiYAFyZHgMcmI4zATgR+B4UiQY4DXgrsAdwmr9cysystepd49goIjZP\ny4iSZfOIGFEn9hrgibLiQ4FZaX0WxXd99JafF4UbgS0lbQccAMyLiCciYjUwj/WTkZmZDaCB/s7x\nMRHxSFpfAYxJ69tTTPvttSyVVSs3M7MWGejE8bKICKDf7tsh6URJ8yXNX7lyZX/t1szMygx04ng0\nDUGRfj6WypdTfFFUr7GprFr5eiLinIiYHBGTR4/2nVLMzJploBPHXKB3ZtQM4JKS8mPS7Ko9gSfT\nkNYVwP6StkoXxfdPZWZm1iJ1P8fRV5JmA/sCoyQto5gd9RXgQkknAA8C01L1yyi+y3wJsAY4DiAi\nnpD0BeCWVO/0iCi/4G5mZgOoaYkjIo6ssmm/CnUDOLnKfmYCM/uxaWZmtgFadnHczMw6kxOHmZll\nceIwM7MsThxmZpbFicPMzLI4cZiZWRYnDjMzy+LEYWZmWZw4zMwsixOHmZllceIwM7MsThxmZpbF\nicPMzLI4cZiZWRYnDjMzy+LEYWZmWZw4zMwsixOHmZllceIwM7MsThxmZpbFicPMzLI4cZiZWRYn\nDjMzy+LEYWZmWZw4zMwsixOHmZllceIwM7MsThxmZpbFicPMzLI4cZiZWRYnDjMzy+LEYWZmWZw4\nzMwsixOHmZllceIwM7MsThxmZpbFicPMzLI4cZiZWRYnDjMzy9KSxCFpqaQ7Jd0uaX4q21rSPEl/\nTj+3SuWSdJakJZLukDSpFW02M7NCK3sc74yI3SJicnp8KnBlREwArkyPAQ4EJqTlROB7A95SMzN7\nWTsNVR0KzErrs4DDSsrPi8KNwJaStmtFA83MrHWJI4DfSlog6cRUNiYiHknrK4AxaX174OGS2GWp\nzMzMWmBoi447JSKWS9oGmCdpcenGiAhJkbPDlIBOBNhhhx36r6VmZvYKLelxRMTy9PMxYA6wB/Bo\n7xBU+vlYqr4cGFcSPjaVle/znIiYHBGTR48e3czmm5l1tQFPHJJeLWnz3nVgf2AhMBeYkarNAC5J\n63OBY9Lsqj2BJ0uGtMzMbIC1YqhqDDBHUu/xL4iIyyXdAlwo6QTgQWBaqn8ZcBCwBFgDHDfwTTYz\ns14Dnjgi4n7gzRXKVwH7VSgP4OQBaJqZmTWgnabjmplZB3DiMDOzLE4cZmaWxYnDzMyyOHGYmVkW\nJw4zM8vixGFmZlmcOMzMLIsTh5mZZXHiMDOzLE4cZmaWxYnDzMyyOHGYmVkWJw4zM8vixGFmZlmc\nOMzMLIsTh5mZZXHiMDOzLE4cZmaWxYnDzMyyOHGYmVkWJw4zM8vixGFmZlmcOMzMLIsTh5mZZXHi\nMDOzLE4cZmaWxYnDzMyyOHGYmVkWJw4zM8vixGFmZlmcOMzMLIsTh5mZZXHiMDOzLE4cZmaWxYnD\nzMyyOHGYmVkWJw4zM8vixGFmZlmcOMzMLEvHJA5JUyXdI2mJpFNb3R4zs27VEYlD0hDgu8CBwC7A\nkZJ2aW2rzMy6U0ckDmAPYElE3B8Rfwd+Bhza4jaZmXWloa1uQIO2Bx4uebwMeGtpBUknAiemh89I\nuqfKvkYBj5cENtoGxw2WuMZjHNedcZ33nO6/uNc2tIeIaPsFOAL4Ycnjo4Hv9HFf8x3nOMc5rh2O\n1UlxpUunDFUtB8aVPB6byszMbIB1SuK4BZggabykjYEPAHNb3CYzs67UEdc4IuIFSacAVwBDgJkR\nsaiPuzvHcY5znOPa5FidFPcypTEvMzOzhnTKUJWZmbUJJw4zM8vixGFmZlmcOMzMLEvXJg5J766z\nfYSkHSuU71onbltJ26b10ZLeJ+kNfWjfl/oQMz4db2KdejtIGp7WJek4Sd+W9BFJVWfaSXpvb1wf\n2vZ2STul9b0lfVzSwQ3EbSbpCEn/V9LH0s0uaz5vJQ2V9GFJl0u6Iy2/kfTPkob1sf1VZ6JIGpKO\n9wVJe5dt+2yNuE0lfVLSJyQNl3SspLmSzpS0WWb77m2gzq4l68MkfTYd70uSNq0Rd4qkUWn9HyRd\nI+mvkm6S9KYacRdLmp5zLpJeJ2mmpC+mv/0PJC2U9N+SemrEbSTpeEm/lvQnSbdK+pmkfescz8+V\nPujaWVWSHoqIHapsmwZ8E3gMGAYcGxG3pG23RsSkKnEfBk4FBJwBHAssBKYAZ0bEj6rEnVVeRPHp\n+PMAIuJjVeJ+GRGHpfVDU5uvBt4GfDkizq0StxDYIyLWSDoD2BH4JfCudLzjq8Q9C/wN+A0wG7gi\nIl6sVLcs7psU9xsbSjGler+0j3cAt0XEJ6rETQM+DtwBvBO4nuLNzpuAoyLizipxs4G/ArMobk8D\nxYdGZwBbR8T/qRK3dbVTAP4UEWOrxP0Q2BS4meLv9oeI+H9pW63ny4UUt9J5FbATcDfwc+C9wLYR\ncXSVuKeB3n/c3vtFbAqsASIiRlSJe7ktkr4GjAR+DBwGjIyIY6rELYqIN6T1X1PcxWFOelH+r4jY\nu0rccuAGiufV7yieM7+O4n5zFUm6JtXbApie2nchsD/F3/xdVeJ+DDyYjnME8BRwLfDvwCUR8e0q\ncX6u9MWGfvS8nReKDwlWWi4F/lYj7nZgu7S+B7AYODw9vq1G3J3pjzISeCb9QQG2Am6vEfcwcD5w\nDMUTdgawsne9RtxtJevXA+PT+iiKJ2+1uLtK1hcAG5U8rhV3WzqXDwFXAo8C3wfeUefvsCg9aTcF\nVgObpvJhwMIacXeU1B1FkagAdgWurxF3bx+3vQjcDzxQsvQ+/nutdpasD6WYJ38xsEmd58vt6aeA\nFax7I6fSfVaIO4viTcWYkrIHGvh/KH2+3A4Ma/B495Ss31Lt3KsdDxhB8SJ5WXpe/xjYv4E2PlRt\nW62/QXp8Y/q5CXC3nyt5z5V6S0d8AHAD7EPxruWZsnJRJIRqhkTEIwARcbOkdwK/kjSOddm7kucj\nYg2wRtJ9EbEi7WO1pFpxuwBfAKYCH4+Iv0g6LSJm1Ty7V7ZlaEQ8kI73uKSXasQ9LOldEXEVsJTi\ndi4PShpZ73gRsRr4AfADFUNy04CvSBobEeNqxEVJm3rb/RK1h0sFPJvW/wZsk3Z2h6Ra75SekPR+\n4KKIeAmKoQzg/RSJq5r7gf0i4qH1GiI9XKF+r417VyLiBeBESZ8DrgLqDiOk381lkf6r0+Oqz5eI\n+JiktwCzJf0S+A61n5e9tpB0OMXvfJOIeL6R4wG/kHQucDowR9K/AnMoehLr/a5Km5r2/xTwE+An\n6Tn2foqe+W8rxLwk6fUUPY5NJU2OiPmS/oHiw7/VPC9px4i4T9Ik4O/p2M/VOTc/V/piQzNPOy8U\nwyHvrLLtmhpx1wM7lpVtTvEu+7kacQtY9y5ubEn5cGq8ky+p9xbg9xTDM0sbqP8iRZf8aYp/lN5e\n0sbUfhcyLh3nGore1+r0+DaKf4ZqcbXeEb22xrYzKIYNbgG+mo75GYoXju/Xibsi1b0W+HQq3xpY\nVCOuh6IbvxK4Ny2PpbLxNeJOBt5cZdtHa8SdD0ytUP5PFG8mqsX9ENisQvmOwHUN/P03Aj6Wfjd/\naaD+j8uWMal8W+DKOrHHAjdR3FX1aeAu4EvAFjViqv6P1YjZD7iHYihmCnARsCT9/Q6tEdebxP5M\n8a7/ral8NMUwsZ8rGc+VekvXXuOoRdKbKYaylpSVDwOmRcRPq8TtQPFHeaGsfHtg54j4XQPHFnAS\nsFdETO9j+7dMx7uhTr2dgddTdJmXUQxDVO2pSNo3Iq7uY5v2Al6KiJtUTDo4nOIf/Rd1jnkQsDNF\nIpyXyjaiSNDPNXDckQARsaov7W4VSYoG/zklbQfsHhGXNblZLaHiwvzqqHM9Lf3vjIyIx2vVqxHv\n50qjNjTztPtC0b39veO6K67G/t7tuM6Ma9axKK7B7FihfNdujqu1DPrpuFG8S3lJ0haO6564GirO\nbHNcR8T1+7HSzL3FwEWSFkn6x5LN53ZrXD2D/eJ4r2eAOyXNo7jIClSf5uq4zo6TVO2W+6KY8VZ5\no+NaHjfQbQQ+DbwlIh6RtAfFBfxPRcQc1k1f7ca4mrolcVycFsd1R1xfZ9M5rvVxA93Gvs6gHOxx\ntfV1jMuLl3Zd6PtsOse1OK4FbezrDMpBHVdv6YpZVZIeoEJ2jYjXOW7wxpnVswEzKAd1XD3dMlQ1\nuWR9OMWHe6rdMsBxgyBO0hDgdxHxzgb277g2ihvIY0XEn1TcP+r3pXFRfDiy6ovqYI+rq69dlU5f\ngAWOG9xxFN3xqh9Qc1z7xnVCG7shrtrSFT0OFbcg6LURxTvYuufuuM6Oo81nfzmuZlwntLEb4irq\nisQBfK1k/QWK+zNNc9ygj2v32V+Oa49jOS5TV1wcNzOz/tMVPY70qePTgLenoj8Ap0fEk44b1HEd\nMfvLcZ3Zxm6Iq6YrEgcwk+ILlXqHN46muDvo+xw3qOPafvaX49riWI7L1V9X2dt5ocKXKFUqc9zg\niquyr7ab/eW49juW42ov3dLjeFbSlIi4DkDFd/0+WyfGcR0e1ymzvxzXmW3shrhquiVxfASYpXV3\nWF1N8bWsjhvccZ0y+8txrT2W4zJ1xawqSZtQfIH9jsCWwJMU37p4uuMGb5yZNceg/z6O5BLgPcBa\nYDnFh2H+VjPCcR0fJ2kLSV+XND8tX1MD3+vhuNbHdUIbuyGu6v66pMexMCLe6Liui7uIYjbWrFR0\nNMX3RNecjeW41sd1Qhu7Ia6qvl5V76QFOAd4k+O6Lq4jZn85rjPb2A1x1ZZBfXFc0p0UH3oZChwn\n6X7gOUAUY+S7Om7wxZXoiNlfjmv5sRyXaVAPVUl6ba3tEfGg4wZfXEn8bhRd81fMxoqIOxzX3nGd\n0MZuiKu6v8GcOKy7qUNmfzmuM9vYDXHVDOqhKut6lwB/BW6lmI3luM6J64Q2dkNcRe5x2KDVQbO/\nHNfCYzkuX7d8jsO60/WS3uS4jozrhDZ2Q1xF7nHYoFM2G2sC0JdZXI5rQVwntLEb4upx4rBBp1Nm\nfzlu/bhOaGM3xNXjxGFmZll8jcPMzLI4cZiZWRYnDrN+IOmZssfHSvpOq9pj1kxOHGZtTJI/pGtt\nx4nDrMkk9Ui6StIdkq6UtEMqP1fSESX1nkk/95V0raS5wF0tarZZVX43Y9Y/XiXp9pLHWwNz0/q3\ngVkRMUvS8cBZwGF19jcJeGNEPND/TTXbME4cZv3j2YjYrfeBpGOByenhXkDvF+b8BDizgf3d7KRh\n7cpDVWat8wLpf1DSRsDGJdsa+Upds5Zw4jBrvuuBD6T1o4Br0/pS4C1p/b3AsIFtllnfOHGYNd9H\nKb7B8A6K73r+l1T+A+Adkv5EMZzlXoZ1BN9yxMzMsrjHYWZmWZw4zMwsixOHmZllceIwM7MsThxm\nZpbFicPMzLI4cZiZWRYnDjMzy/I/zxozOfbiNrwAAAAASUVORK5CYII=\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "q--UOyF8ht9G",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
+        "\n",
+        "\n",
         "from ipywidgets import interact, interactive, fixed, interact_manual\n",
         "import ipywidgets as widgets\n",
         "from IPython.display import display\n",
