--- a/DEED.ipynb
+++ b/DEED.ipynb
@@ -61,7 +61,34 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Create Environment"
+        "**Create Environment**\n",
+        "\n",
+        "Environments all descend from the Env base class. You can view a list of all environments via:\n",
+        "\n",
+        "```\n",
+        "from gym import envs\n",
+        "print(envs.registry.all())\n",
+        "```\n",
+        "\n",
+        "Important environment functions/properties:\n",
+        "\n",
+        "**step**: Returns info regarding what our actions are doing to the \n",
+        "\n",
+        "* environment at each step. The return values:\n",
+        "* observation (object)\n",
+        "* reward (float)\n",
+        "* done (boolean)\n",
+        "* info (dict)\n",
+        "**reset**: returns an initial observation.\n",
+        "**Space objects**: two objects (below) that describe the valid actions and observations.\n",
+        "\n",
+        "* action_space [returns Discrete(2) for cartpole]. Example usage of Discrete: \n",
+        "\n",
+        "```\n",
+        "python from gym import spaces space = spaces.Discrete(8) # Set with 8 elements {0, 1, 2, ..., 7} x = space.sample() assert space.contains(x) assert space.n == 8\n",
+        "```\n",
+        "\n",
+        "* observation_space [returns Box(4) for cartpole]\n"
       ]
     },
     {
@@ -72,165 +99,105 @@
       },
       "cell_type": "code",
       "source": [
-        "#import os, subprocess, time, signal\n",
         "import gym\n",
-        "from gym import error, spaces\n",
-        "#from gym import utils\n",
-        "#from gym.utils import seeding\n",
+        "from gym import error, spaces, utils\n",
+        "from gym.utils import seeding\n",
         "\n",
-        "#try:\n",
-        "#    import hfo_py\n",
-        "#except ImportError as e:\n",
-        "#    raise error.DependencyNotInstalled(\"{}. (HINT: you can install HFO dependencies with 'pip install gym[soccer].)'\".format(e))\n",
+        "class Generators(gym.Env):\n",
+        "\tmetadata = {'render.modes': ['human']}\n",
         "\n",
-        "#import logging\n",
-        "#logger = logging.getLogger(__name__)\n",
+        "\tdef __init__(self):\n",
+        "\t\tself.state = []\n",
+        "\t\tfor i in range(3):\n",
+        "\t\t\tself.state += [[]]\n",
+        "\t\t\tfor j in range(3):\n",
+        "\t\t\t\tself.state[i] += [\"-\"]\n",
+        "\t\tself.counter = 0\n",
+        "\t\tself.done = 0\n",
+        "\t\tself.add = [0, 0]\n",
+        "\t\tself.reward = 0\n",
         "\n",
-        "class GeneratorsEnv(gym.Env, utils.EzPickle):\n",
-        "    metadata = {'render.modes': ['human']}\n",
+        "\tdef check(self):\n",
         "\n",
-        "    def __init__(self):\n",
-        "        self.viewer = None\n",
-        "        self.server_process = None\n",
-        "        self.server_port = None\n",
-        "        self.hfo_path = hfo_py.get_hfo_path()\n",
-        "        self._configure_environment()\n",
-        "        self.env = hfo_py.HFOEnvironment()\n",
-        "        self.env.connectToServer(config_dir=hfo_py.get_config_path())\n",
-        "        self.observation_space = spaces.Box(low=-1, high=1,\n",
-        "                                            shape=(self.env.getStateSize()))\n",
-        "        # Action space omits the Tackle/Catch actions, which are useful on defense\n",
-        "        self.action_space = spaces.Tuple((spaces.Discrete(3),\n",
-        "                                          spaces.Box(low=0, high=100, shape=1),\n",
-        "                                          spaces.Box(low=-180, high=180, shape=1),\n",
-        "                                          spaces.Box(low=-180, high=180, shape=1),\n",
-        "                                          spaces.Box(low=0, high=100, shape=1),\n",
-        "                                          spaces.Box(low=-180, high=180, shape=1)))\n",
-        "        self.status = hfo_py.IN_GAME\n",
+        "\t\tif(self.counter<5):\n",
+        "\t\t\treturn 0\n",
+        "\t\tfor i in range(3):\n",
+        "\t\t\tif(self.state[i][0] != \"-\" and self.state[i][1] == self.state[i][0] and self.state[i][1] == self.state[i][2]):\n",
+        "\t\t\t\tif(self.state[i][0] == \"o\"):\n",
+        "\t\t\t\t\treturn 1\n",
+        "\t\t\t\telse:\n",
+        "\t\t\t\t\treturn 2\n",
+        "\t\t\tif(self.state[0][i] != \"-\" and self.state[1][i] == self.state[0][i] and self.state[1][i] == self.state[2][i]):\n",
+        "\t\t\t\tif(self.state[0][i] == \"o\"):\n",
+        "\t\t\t\t\treturn 1\n",
+        "\t\t\t\telse:\n",
+        "\t\t\t\t\treturn 2\n",
+        "\t\tif(self.state[0][0] != \"-\" and self.state[1][1] == self.state[0][0] and self.state[1][1] == self.state[2][2]):\n",
+        "\t\t\tif(self.state[0][0] == \"o\"):\n",
+        "\t\t\t\treturn 1\n",
+        "\t\t\telse:\n",
+        "\t\t\t\treturn 2\n",
+        "\t\tif(self.state[0][2] != \"-\" and self.state[0][2] == self.state[1][1] and self.state[1][1] == self.state[2][0]):\n",
+        "\t\t\tif(self.state[1][1] == \"o\"):\n",
+        "\t\t\t\treturn 1\n",
+        "\t\t\telse:\n",
+        "\t\t\t\treturn 2\n",
         "\n",
-        "    def __del__(self):\n",
-        "        self.env.act(hfo_py.QUIT)\n",
-        "        self.env.step()\n",
-        "        os.kill(self.server_process.pid, signal.SIGINT)\n",
-        "        if self.viewer is not None:\n",
-        "            os.kill(self.viewer.pid, signal.SIGKILL)\n",
+        "\tdef step(self, target):\n",
+        "\t\tif self.done == 1:\n",
+        "\t\t\tprint(\"Game Over\")\n",
+        "\t\t\treturn [self.state, self.reward, self.done, self.add]\n",
+        "\t\telif self.state[int(target/3)][target%3] != \"-\":\n",
+        "\t\t\tprint(\"Invalid Step\")\n",
+        "\t\t\treturn [self.state, self.reward, self.done, self.add]\n",
+        "\t\telse:\n",
+        "\t\t\tif(self.counter%2 == 0):\n",
+        "\t\t\t\tself.state[int(target/3)][target%3] = \"o\"\n",
+        "\t\t\telse:\n",
+        "\t\t\t\tself.state[int(target/3)][target%3] = \"x\"\n",
+        "\t\t\tself.counter += 1\n",
+        "\t\t\tif(self.counter == 9):\n",
+        "\t\t\t\tself.done = 1;\n",
+        "\t\t\tself.render()\n",
         "\n",
-        "    def _configure_environment(self):\n",
-        "        \"\"\"\n",
-        "        Provides a chance for subclasses to override this method and supply\n",
-        "        a different server configuration. By default, we initialize one\n",
-        "        offense agent against no defenders.\n",
-        "        \"\"\"\n",
-        "        self._start_hfo_server()\n",
+        "\t\twin = self.check()\n",
+        "\t\tif(win):\n",
+        "\t\t\tself.done = 1;\n",
+        "\t\t\tprint(\"Player \", win, \" wins.\", sep = \"\", end = \"\\n\")\n",
+        "\t\t\tself.add[win-1] = 1;\n",
+        "\t\t\tif win == 1:\n",
+        "\t\t\t\tself.reward = 100\n",
+        "\t\t\telse:\n",
+        "\t\t\t\tself.reward = -100\n",
         "\n",
-        "    def _start_hfo_server(self, frames_per_trial=500,\n",
-        "                          untouched_time=100, offense_agents=1,\n",
-        "                          defense_agents=0, offense_npcs=0,\n",
-        "                          defense_npcs=0, sync_mode=True, port=6000,\n",
-        "                          offense_on_ball=0, fullstate=True, seed=-1,\n",
-        "                          ball_x_min=0.0, ball_x_max=0.2,\n",
-        "                          verbose=False, log_game=False,\n",
-        "                          log_dir=\"log\"):\n",
-        "        \"\"\"\n",
-        "        Starts the Half-Field-Offense server.\n",
-        "        frames_per_trial: Episodes end after this many steps.\n",
-        "        untouched_time: Episodes end if the ball is untouched for this many steps.\n",
-        "        offense_agents: Number of user-controlled offensive players.\n",
-        "        defense_agents: Number of user-controlled defenders.\n",
-        "        offense_npcs: Number of offensive bots.\n",
-        "        defense_npcs: Number of defense bots.\n",
-        "        sync_mode: Disabling sync mode runs server in real time (SLOW!).\n",
-        "        port: Port to start the server on.\n",
-        "        offense_on_ball: Player to give the ball to at beginning of episode.\n",
-        "        fullstate: Enable noise-free perception.\n",
-        "        seed: Seed the starting positions of the players and ball.\n",
-        "        ball_x_[min/max]: Initialize the ball this far downfield: [0,1]\n",
-        "        verbose: Verbose server messages.\n",
-        "        log_game: Enable game logging. Logs can be used for replay + visualization.\n",
-        "        log_dir: Directory to place game logs (*.rcg).\n",
-        "        \"\"\"\n",
-        "        self.server_port = port\n",
-        "        cmd = self.hfo_path + \\\n",
-        "              \" --headless --frames-per-trial %i --untouched-time %i --offense-agents %i\"\\\n",
-        "              \" --defense-agents %i --offense-npcs %i --defense-npcs %i\"\\\n",
-        "              \" --port %i --offense-on-ball %i --seed %i --ball-x-min %f\"\\\n",
-        "              \" --ball-x-max %f --log-dir %s\"\\\n",
-        "              % (frames_per_trial, untouched_time, offense_agents,\n",
-        "                 defense_agents, offense_npcs, defense_npcs, port,\n",
-        "                 offense_on_ball, seed, ball_x_min, ball_x_max,\n",
-        "                 log_dir)\n",
-        "        if not sync_mode: cmd += \" --no-sync\"\n",
-        "        if fullstate:     cmd += \" --fullstate\"\n",
-        "        if verbose:       cmd += \" --verbose\"\n",
-        "        if not log_game:  cmd += \" --no-logging\"\n",
-        "        print('Starting server with command: %s' % cmd)\n",
-        "        self.server_process = subprocess.Popen(cmd.split(' '), shell=False)\n",
-        "        time.sleep(10) # Wait for server to startup before connecting a player\n",
+        "\t\treturn [self.state, self.reward, self.done, self.add]\n",
         "\n",
-        "    def _start_viewer(self):\n",
-        "        \"\"\"\n",
-        "        Starts the SoccerWindow visualizer. Note the viewer may also be\n",
-        "        used with a *.rcg logfile to replay a game. See details at\n",
-        "        https://github.com/LARG/HFO/blob/master/doc/manual.pdf.\n",
-        "        \"\"\"\n",
-        "        cmd = hfo_py.get_viewer_path() +\\\n",
-        "              \" --connect --port %d\" % (self.server_port)\n",
-        "        self.viewer = subprocess.Popen(cmd.split(' '), shell=False)\n",
+        "\tdef reset(self):\n",
+        "\t\tfor i in range(3):\n",
+        "\t\t\tfor j in range(3):\n",
+        "\t\t\t\tself.state[i][j] = \"-\"\n",
+        "\t\tself.counter = 0\n",
+        "\t\tself.done = 0\n",
+        "\t\tself.add = [0, 0]\n",
+        "\t\tself.reward = 0\n",
+        "\t\treturn self.state\n",
         "\n",
-        "    def _step(self, action):\n",
-        "        self._take_action(action)\n",
-        "        self.status = self.env.step()\n",
-        "        reward = self._get_reward()\n",
-        "        ob = self.env.getState()\n",
-        "        episode_over = self.status != hfo_py.IN_GAME\n",
-        "        return ob, reward, episode_over, {}\n",
+        "\tdef render(self):\n",
+        "\t\tfor i in range(3):\n",
+        "\t\t\tfor j in range(3):\n",
+        "\t\t\t\tprint(self.state[i][j], end = \" \")\n",
+        "\t\t\tprint(\"\")\n",
+        "      \n",
+        "# delete if it's registered\n",
+        "env_name = 'Generators-v0'\n",
+        "if env_name in gym.envs.registry.env_specs:\n",
+        "    del gym.envs.registry.env_specs[env_name]\n",
         "\n",
-        "    def _take_action(self, action):\n",
-        "        \"\"\" Converts the action space into an HFO action. \"\"\"\n",
-        "        action_type = ACTION_LOOKUP[action[0]]\n",
-        "        if action_type == hfo_py.DASH:\n",
-        "            self.env.act(action_type, action[1], action[2])\n",
-        "        elif action_type == hfo_py.TURN:\n",
-        "            self.env.act(action_type, action[3])\n",
-        "        elif action_type == hfo_py.KICK:\n",
-        "            self.env.act(action_type, action[4], action[5])\n",
-        "        else:\n",
-        "            print('Unrecognized action %d' % action_type)\n",
-        "            self.env.act(hfo_py.NOOP)\n",
-        "\n",
-        "    def _get_reward(self):\n",
-        "        \"\"\" Reward is given for scoring a goal. \"\"\"\n",
-        "        if self.status == hfo_py.GOAL:\n",
-        "            return 1\n",
-        "        else:\n",
-        "            return 0\n",
-        "\n",
-        "    def _reset(self):\n",
-        "        \"\"\" Repeats NO-OP action until a new episode begins. \"\"\"\n",
-        "        while self.status == hfo_py.IN_GAME:\n",
-        "            self.env.act(hfo_py.NOOP)\n",
-        "            self.status = self.env.step()\n",
-        "        while self.status != hfo_py.IN_GAME:\n",
-        "            self.env.act(hfo_py.NOOP)\n",
-        "            self.status = self.env.step()\n",
-        "        return self.env.getState()\n",
-        "\n",
-        "    def _render(self, mode='human', close=False):\n",
-        "        \"\"\" Viewer only supports human mode currently. \"\"\"\n",
-        "        if close:\n",
-        "            if self.viewer is not None:\n",
-        "                os.kill(self.viewer.pid, signal.SIGKILL)\n",
-        "        else:\n",
-        "            if self.viewer is None:\n",
-        "                self._start_viewer()\n",
-        "\n",
-        "ACTION_LOOKUP = {\n",
-        "    0 : hfo_py.DASH,\n",
-        "    1 : hfo_py.TURN,\n",
-        "    2 : hfo_py.KICK,\n",
-        "    3 : hfo_py.TACKLE, # Used on defense to slide tackle the ball\n",
-        "    4 : hfo_py.CATCH,  # Used only by goalie to catch the ball\n",
-        "}"
+        "# register the environment so we can play with it\n",
+        "gym.register(\n",
+        "    id=env_name,\n",
+        "    entry_point=Generators\n",
+        ")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -241,7 +208,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 309
+          "height": 289
         },
         "outputId": "20977532-1d70-4097-ef43-a4d96f3d9e5a"
       },
@@ -251,7 +218,7 @@
         "#!rm -rf gym-foo\n",
         "#!pip install cookiecutter\n",
         "#!cookiecutter https://github.com/nbren12/gym_environment_cookie\n",
-        "!pip install -e git+https://github.com/danielcregg/gym-generators#egg=gym-generators\n",
+        "#!pip install -e git+https://github.com/danielcregg/gym-generators#egg=gym-generators\n",
         "#!pip install -e git+https://github.com/apoddar573/Tic-Tac-Toe-Gym_Environment#egg=Tic-Tac-Toe-Gym_Environment\n",
         "#!pip install -e git+https://github.com/apoddar573/Tic-Tac-Toe-Gym_Environment/tree/master/gym-tictac4#egg=gym-tictac4\n",
         " #!pip install -e /content/src/tic-tac-toe-gym-environment/gym-tictac4\n",
@@ -301,7 +268,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 598
         },
-        "outputId": "2ec03d81-b3a2-4fa5-ac88-8d7d08d89881"
+        "outputId": "1cdfc8cc-9168-43ed-dcde-ba06fea8902e"
       },
       "cell_type": "code",
       "source": [
@@ -311,10 +278,10 @@
         "#!pip install -e git+https://github.com/apoddar573/Tic-Tac-Toe-Gym_Environment#egg=gym_tictac4\n",
         "#!pip install -e git+https://github.com/danielcregg/Generators-Gym_Environment\n",
         "  \n",
-        "import gym\n",
-        "os.chdir('/content/src/gym-generators')\n",
-        "import gym_generators\n",
-        "os.chdir('/content')\n",
+        "#import gym\n",
+        "#os.chdir('/content/src/gym-generators')\n",
+        "#import gym_generators\n",
+        "#os.chdir('/content')\n",
         "\n",
         "#from gym_generators.envs.generators_env import Generators\n",
         "#from gym_tictac4.envs.tictac4_env import TicTac4\n",
@@ -333,7 +300,7 @@
         "env.step(8)\n",
         "env.step(2)\n"
       ],
-      "execution_count": 78,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,10 +315,10 @@
             "Requirement already satisfied: atari_py>=0.1.4 in /usr/local/lib/python3.6/dist-packages (from gym[atari]) (0.1.7)\n",
             "Requirement already satisfied: Pillow in /usr/local/lib/python3.6/dist-packages (from gym[atari]) (4.3.0)\n",
             "Requirement already satisfied: PyOpenGL in /usr/local/lib/python3.6/dist-packages (from gym[atari]) (3.1.0)\n",
+            "Requirement already satisfied: idna<2.7,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym[atari]) (2.6)\n",
+            "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym[atari]) (1.22)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym[atari]) (2019.3.9)\n",
             "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym[atari]) (3.0.4)\n",
-            "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym[atari]) (1.22)\n",
-            "Requirement already satisfied: idna<2.7,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym[atari]) (2.6)\n",
             "Requirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from pyglet>=1.2.0->gym[atari]) (0.16.0)\n",
             "Requirement already satisfied: olefile in /usr/local/lib/python3.6/dist-packages (from Pillow->gym[atari]) (0.46)\n",
             "o - - \n",
@@ -383,7 +350,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 78
+          "execution_count": 2
         }
       ]
     },
