--- a/DEED.ipynb
+++ b/DEED.ipynb
@@ -6,8 +6,7 @@
       "name": "DEED",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -266,7 +265,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 598
+          "height": 578
         },
         "outputId": "1cdfc8cc-9168-43ed-dcde-ba06fea8902e"
       },
@@ -644,10 +643,10 @@
       "metadata": {
         "id": "Ff-0b8A0we1V",
         "colab_type": "code",
-        "outputId": "d1afbc06-9770-4ece-bb19-3ad8c489516c",
+        "outputId": "1edd6c21-92f7-4fef-b225-f0e0bf0d51bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 51
         }
       },
       "cell_type": "code",
@@ -688,14 +687,34 @@
         "#print(generator_characteristics.loc[generator_characteristics.loc[:, \"dr_i\"] <= 50, :])\n",
         "\n",
         "# Select a specific unit value by label\n",
-        "print(generator_characteristics.loc[\"unit3\", \"d_i\"])\n"
+        "print(generator_characteristics.loc[\"unit3\", \"d_i\"])\n",
+        "# Show full dataFrame\n",
+        "\n",
+        "#--------------------------------------------------------------------------------\n",
+        "\n",
+        "#B is the matrix of transmission line loss coefficients\n",
+        "# data in the form of list of tuples \n",
+        "B = pd.DataFrame([(0.000049,0.000014,0.000015,0.000015,0.000016,0.000017,0.000017,0.000018,0.000019,0.000020),\n",
+        "                  (0.000014,0.000045,0.000016,0.000016,0.000017,0.000015,0.000015,0.000016,0.000018,0.000018),\n",
+        "                  (0.000015,0.000016,0.000039,0.000010,0.000012,0.000012,0.000014,0.000014,0.000016,0.000016),\n",
+        "                  (0.000015,0.000016,0.000010,0.000040,0.000014,0.000010,0.000011,0.000012,0.000014,0.000015),\n",
+        "                  (0.000016,0.000017,0.000012,0.000014,0.000035,0.000011,0.000013,0.000013,0.000015,0.000016),\n",
+        "                  (0.000017,0.000015,0.000012,0.000010,0.000011,0.000036,0.000012,0.000012,0.000014,0.000015),\n",
+        "                  (0.000017,0.000015,0.000014,0.000011,0.000013,0.000012,0.000038,0.000016,0.000016,0.000018),\n",
+        "                  (0.000018,0.000016,0.000014,0.000012,0.000013,0.000012,0.000016,0.000040,0.000015,0.000016),\n",
+        "                  (0.000019,0.000018,0.000016,0.000014,0.000015,0.000014,0.000016,0.000015,0.000042,0.000019),\n",
+        "                  (0.000020,0.000018,0.000016,0.000015,0.000016,0.000015,0.000018,0.000016,0.000019,0.000044)])\n",
+        "\n",
+        "# Select a specific unit value by its index\n",
+        "print(B.iloc[0,0])"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "320\n"
+            "320\n",
+            "4.9e-05\n"
           ],
           "name": "stdout"
         }
