--- a/DEED.ipynb
+++ b/DEED.ipynb
@@ -197,6 +197,7 @@
         "    print(\"Generators Environment Initialised\")\n",
         "    #self.state = hour_power_demand.diff()\n",
         "    self.state = []\n",
+        "    self.active_unit = \"unit1\"\n",
         "    self.counter = 0\n",
         "    self.done = 0\n",
         "    self.add = [0, 0]\n",
@@ -273,6 +274,8 @@
         "\n",
         "  def step(self, action):\n",
         "    assert self.action_space.contains(action), \"%r (%s) invalid\"%(action, type(action))\n",
+        "    P_n = self.generator_characteristics.loc[self.active_unit , \"p_min_i\"] + action * ((self.generator_characteristics.loc[self.active_unit , \"p_max_i\"] - self.generator_characteristics.loc[self.active_unit , \"p_min_i\"]) / 100)\n",
+        "    print(P_n)\n",
         "    state = self.state\n",
         "    if self.done == 1:\n",
         "      print(\"Game Over\")\n",
@@ -292,8 +295,8 @@
         "    self.done = 0\n",
         "    self.add = [0, 0]\n",
         "    self.reward = 0\n",
-        "    space = spaces.Discrete(24) # Set with 8 elements {0, 1, 2, ..., 23}\n",
-        "    self.action_space = spaces.Tuple((spaces.Discrete(101)))\n",
+        "    #space = spaces.Discrete(24) # Set with 8 elements {0, 1, 2, ..., 23}\n",
+        "    #self.action_space = spaces.Tuple((spaces.Discrete(101)))\n",
         "\n",
         "# delete if it's registered\n",
         "env_name = 'Generators-v0'\n",
@@ -315,9 +318,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 401
+          "height": 102
         },
-        "outputId": "22e4a4ff-6e10-43fb-fd28-bbd4030fa14b"
+        "outputId": "205ac8d9-e2f1-4c48-e680-2ce2438043ac"
       },
       "cell_type": "code",
       "source": [
@@ -341,11 +344,15 @@
         "#env = gym.make(\"gym_tictac4\").env\n",
         "env = gym.make(\"Generators-v0\")\n",
         "\n",
-        "env.reset()\n",
-        "\n",
-        "env.step()\n",
-        "\n",
         "print(env.action_space)\n",
+        "#print(env.action_space.n)\n",
+        "#print(env.action_space.sample())\n",
+        "\n",
+        "#env.reset()\n",
+        "\n",
+        "env.step(0)\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "#env.show_unit_characteristics(\"unit5\")\n",
@@ -356,28 +363,29 @@
         "#print(env.emissions_function_local(\"unit1\"))\n",
         "#print(env.emissions_function_global())"
       ],
-      "execution_count": 58,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Generators Environment Initialised\n",
-            "Generators Environment Reset\n",
+            "Discrete(101)\n",
+            "150.0\n",
             "Game in progress\n"
           ],
           "name": "stdout"
         },
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-58-f4b5ea095365>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maction_space\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/gym/spaces/tuple_space.py\u001b[0m in \u001b[0;36m__repr__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__repr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m\"Tuple(\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\", \"\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspaces\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\")\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mto_jsonable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_n\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'Discrete' object is not iterable"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[], 0, 0, [0, 0]]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 87
         }
       ]
     },
