--- a/DEED.ipynb
+++ b/DEED.ipynb
@@ -481,7 +481,7 @@
         "            chosen_action = action\n",
         "        return chosen_action"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,7 +551,7 @@
         "#print(env.emissions_function_local(\"unit1\"))\n",
         "#print(env.emissions_function_global())"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,6 +562,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OYV1_YwMNoPc",
+        "colab_type": "text"
+      },
+      "source": [
+        "**CREATE AGENTS SECTION**"
       ]
     },
     {
@@ -586,7 +596,49 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mt671Y79v-np",
+        "id": "O1PAzOdGNy1M",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from qlearning import QLearningAgent\n",
+        "\n",
+        "agent_u2 = QLearningAgent(alpha=0.1, epsilon=0.1, discount=0.75,\n",
+        "                       get_legal_actions = lambda s: range(n_actions))\n",
+        "agent_u3 = QLearningAgent(alpha=0.1, epsilon=0.1, discount=0.75,\n",
+        "                       get_legal_actions = lambda s: range(n_actions))\n",
+        "agent_u4 = QLearningAgent(alpha=0.1, epsilon=0.1, discount=0.75,\n",
+        "                       get_legal_actions = lambda s: range(n_actions))\n",
+        "agent_u5 = QLearningAgent(alpha=0.1, epsilon=0.1, discount=0.75,\n",
+        "                       get_legal_actions = lambda s: range(n_actions))\n",
+        "agent_u6 = QLearningAgent(alpha=0.1, epsilon=0.1, discount=0.75,\n",
+        "                       get_legal_actions = lambda s: range(n_actions))\n",
+        "agent_u7 = QLearningAgent(alpha=0.1, epsilon=0.1, discount=0.75,\n",
+        "                       get_legal_actions = lambda s: range(n_actions))\n",
+        "agent_u8 = QLearningAgent(alpha=0.1, epsilon=0.1, discount=0.75,\n",
+        "                       get_legal_actions = lambda s: range(n_actions))\n",
+        "agent_u9 = QLearningAgent(alpha=0.1, epsilon=0.1, discount=0.75,\n",
+        "                       get_legal_actions = lambda s: range(n_actions))\n",
+        "agent_u10 = QLearningAgent(alpha=0.1, epsilon=0.1, discount=0.75,\n",
+        "                       get_legal_actions = lambda s: range(n_actions))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lk4__lJRNvNY",
+        "colab_type": "text"
+      },
+      "source": [
+        "**TRAINING DAY**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c1mlTGSpOTHf",
         "colab_type": "code",
         "colab": {}
       },
@@ -622,12 +674,84 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "mt671Y79v-np",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def play_and_train_all_agents(env,agent_u2,agent_u3,agent_u4,agent_u5,agent_u6,agent_u7,agent_u8,agent_u9,agent_u10,t_max=24):\n",
+        "    \"\"\"\n",
+        "    This function should \n",
+        "    - run a full game, actions given by agent's e-greedy policy\n",
+        "    - train agent using agent.update(...) whenever it is possible\n",
+        "    - return total reward\n",
+        "    \"\"\"\n",
+        "    total_reward = 0.0\n",
+        "    s[] = env.reset()\n",
+        "    \n",
+        "    for t in range(t_max):\n",
+        "        # get agent to pick action given state s.\n",
+        "        action_u2 = agent.get_action(s)\n",
+        "        action_u3 = agent.get_action(s)\n",
+        "        action_u4 = agent.get_action(s)\n",
+        "        action_u5 = agent.get_action(s)\n",
+        "        action_u6 = agent.get_action(s)\n",
+        "        action_u7 = agent.get_action(s)\n",
+        "        action_u8 = agent.get_action(s)\n",
+        "        action_u9 = agent.get_action(s)\n",
+        "        action_u10 = agent.get_action(s)\n",
+        "        \n",
+        "        #print(env.step(a))\n",
+        "        \n",
+        "        next_s_u2, r_u2, done_u2, _ = env.step(action_u2)\n",
+        "        next_s_u3, r_u3, done_u3, _ = env.step(action_u3)\n",
+        "        next_s_u4, r_u4, done_u4, _ = env.step(action_u4)\n",
+        "        next_s_u5, r_u5, done_u5, _ = env.step(action_u5)\n",
+        "        next_s_u6, r_u6, done_u6, _ = env.step(action_u6)\n",
+        "        next_s_u7, r_u7, done_u7, _ = env.step(action_u7)\n",
+        "        next_s_u8, r_u8, done_u8, _ = env.step(action_u8)\n",
+        "        next_s_u9, r_u9, done_u9, _ = env.step(action_u9)\n",
+        "        next_s_u10, r_u10, done_u10, _ = env.step(action_u10)\n",
+        "       \n",
+        "        # train (update) agent for state s\n",
+        "        agent_u2.update(s[0],action_u2,r_u2,next_s_u2)\n",
+        "        agent_u3.update(s[1],action_u3,r_u3,next_s_u3)\n",
+        "        agent_u4.update(s[2],action_u4,r_u4,next_s_u4)\n",
+        "        agent_u5.update(s[3],action_u5,r_u5,next_s_u5)\n",
+        "        agent_u6.update(s[4],action_u6,r_u6,next_s_u6)\n",
+        "        agent_u7.update(s[5],action_u7,r_u7,next_s_u7)\n",
+        "        agent_u8.update(s[6],action_u8,r_u8,next_s_u8)\n",
+        "        agent_u9.update(s[7],action_u9,r_u9,next_s_u9)\n",
+        "        agent_u10.update(s[8],action_u10,r_u10,next_s_u10)\n",
+        "        \n",
+        "        s[0] = next_s_u2\n",
+        "        s[1] = next_s_u3\n",
+        "        s[2] = next_s_u4\n",
+        "        s[3] = next_s_u5\n",
+        "        s[4] = next_s_u6\n",
+        "        s[5] = next_s_u7\n",
+        "        s[6] = next_s_u8\n",
+        "        s[7] = next_s_u9\n",
+        "        s[8] = next_s_u10\n",
+        "        \n",
+        "        total_reward += (r_u2 + r_u3 + r_u4 + r_u5 + r_u6 + r_u7 + r_u8 + r_u9 + r_u10)\n",
+        "        #if done: break\n",
+        "        \n",
+        "    return total_reward"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "41nicKDJylKi",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "#print(play_and_train(env, agent, 30))"
+        "#print(play_and_train(env, agent, 30))\n",
+        "print(play_and_train_all_agents(env,agent_u2,agent_u3,agent_u4,agent_u5,agent_u6,agent_u7,agent_u8,agent_u9,agent_u10))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -669,7 +793,7 @@
         "        plt.plot(rewards)\n",
         "        plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
